# lrs

./: .gitignore  Cargo.toml  README.md
lrs/base/calc/: Cargo.toml
lrs/net/tcp/client/: Cargo.toml
lrs/net/tcp/client/src/: main.rs
lrs/net/tcp/server/: Cargo.toml
lrs/net/tcp/server/src/: main.rs
lrs/net/udp/client/: Cargo.toml
lrs/net/udp/client/src/: main.rs
lrs/net/udp/server/: Cargo.toml
lrs/net/udp/server/src/: main.rs
lrs/net/web/web_starter/: Cargo.toml
lrs/net/web/web_starter/src/: logger.rs  main.rs
lrs/net/web/web_starter/src/config/: mod.rs  server.rs
lrs/week_01/: Cargo.toml
