[package]
name = "tcp_server"
version = { workspace = true }
edition = { workspace = true }
description = "TCP server example for learning Rust"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }

[dependencies]