[package]
name = "udp_client"
version = { workspace = true }
edition = { workspace = true }
description = "UDP client example for learning Rust"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }

[dependencies]